k8s/canary/05-service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-stable
  namespace: default
  labels:
    app: webapp
    track: stable
spec:
  selector:
    app: webapp
    track: stable
  ports:
    - port: 80
      targetPort: 80
