k8s/canary/06-service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-canary
  namespace: default
  labels:
    app: webapp
    track: canary
spec:
  selector:
    app: webapp
    track: canary
  ports:
    - port: 80
      targetPort: 80
